--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,21 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    
+    
+    <!--blue color pallete-->
+    <color name="light_blue">#E7F2F8</color>
+    <color name="blue">#87C4FF</color>
+    <color name="dark_blue">#038FFF</color>
+    <color name="beige">#FFEED9</color>
+
+    <color name="gray">#808080</color>
+    <color name="very_light_gray">#DCD6D0</color>
+    <color name="light_gray">#d3d3d3</color>
+    <color name="light_silver">#E4E4E4</color>
+    <color name="silver">#c0c0c0</color>
+
+    <color name="light_green">#D1FFBD</color>
+
+
 </resources>
