--- a/app/src/main/res/drawable/bg_add_task.xml
+++ b/app/src/main/res/drawable/bg_add_task.xml
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- rectangle_10 from your XD file. -->
+<?xml version="1.0" encoding="utf-8"?><!-- rectangle_10 from your XD file. -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle">
     <corners android:radius="20dp" />
-    <stroke android:color="@color/blue" android:width="1dp"/>
+    <stroke
+        android:width="1dp"
+        android:color="@color/blue" />
     <solid android:color="@color/light_blue" />
 </shape>
