--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,57 +8,56 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:drawablePadding="7dp"
+        android:fontFamily="sans-serif"
         android:text="@string/app_name"
         android:textColor="@color/dark_blue"
-        android:layout_marginTop="15dp"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif"
         android:textSize="28sp"
-        android:drawablePadding="7dp"
-        android:layout_marginStart="15dp"
-        android:id="@+id/app_name"
-        />
+        android:textStyle="bold" />
+
     <ImageView
         android:layout_width="43dp"
         android:layout_height="43dp"
-        android:layout_marginTop="11dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="11dp"
         android:layout_toEndOf="@+id/app_name"
-        android:backgroundTint="@color/dark_blue"
         android:background="@drawable/vector_done"
-        />
+        android:backgroundTint="@color/dark_blue" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:id="@+id/recyclerview"
-        android:layout_below="@+id/app_name"
-        />
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_centerInParent="true"
-    >
-    <ImageView
-        android:id="@+id/img_view"
-        android:layout_width="350dp"
-        android:layout_height="300dp"
-        android:src="@drawable/task" />
-
-    <TextView
-        android:id="@+id/text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:text="Click + to create new task.\nSwipe right on task to Delete.\nSwipe Left on task to Edit"
-        android:textAlignment="center"
-        android:textSize="15dp"
-        tools:ignore="TextSizeCheck" />
-</LinearLayout>
+        android:layout_below="@+id/app_name"
+        android:layout_marginTop="20dp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/img_view"
+            android:layout_width="350dp"
+            android:layout_height="300dp"
+            android:src="@drawable/task" />
+
+        <TextView
+            android:id="@+id/text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="Click + to create new task.\nSwipe right on task to Delete.\nSwipe Left on task to Edit"
+            android:textAlignment="center"
+            android:textSize="15dp"
+            tools:ignore="TextSizeCheck" />
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_todo"
