--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -2,10 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
-    android:id="@+id/cv"
     android:layout_marginVertical="8dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="7dp">
@@ -19,27 +19,27 @@
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
             android:maxLines="1"
             android:minHeight="40dp"
             android:paddingStart="8dp"
             android:text="This is Task 1"
-            android:textStyle="bold"
             android:textColor="@color/black"
-            android:ellipsize="end"
             android:textSize="15sp"
+            android:textStyle="bold"
             tools:ignore="TouchTargetSizeCheck" />
+
         <TextView
+            android:id="@+id/task_status_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:textColor="#9D00FD"
-            android:maxLines="1"
-            android:id="@+id/task_status_text"
-            android:paddingEnd="10dp"
             android:layout_marginTop="10dp"
+            android:maxLines="1"
             android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:text="Task status"
-            />
+            android:textColor="#9D00FD" />
 
         <!-- Task description -->
         <TextView
@@ -47,18 +47,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/checkbox"
-            android:paddingEnd="10dp"
-            android:ellipsize="end"
             android:layout_marginStart="42dp"
+            android:ellipsize="end"
             android:maxLines="2"
-            />
+            android:paddingEnd="10dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/description"
-            android:padding="5dp"
             android:layout_marginStart="20dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="5dp">
 
             <!-- Date -->
             <TextView
@@ -66,28 +66,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/description"
+                android:layout_weight="1"
+                android:autoSizeTextType="uniform"
+                android:maxLines="1"
                 android:paddingHorizontal="10dp"
                 android:text="Date"
-                android:autoSizeTextType="uniform"
-                android:layout_weight="1"
-                android:maxLines="1"
                 android:textColor="#ff0000"
-                android:textSize="15sp"
-                />
+                android:textSize="15sp" />
 
             <!-- Time -->
             <TextView
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:autoSizeTextType="uniform"
+                android:maxLines="1"
                 android:paddingHorizontal="10dp"
                 android:text="Time"
-                android:maxLines="1"
-                android:autoSizeTextType="uniform"
-                android:layout_weight="1"
                 android:textColor="#00ff00"
-                android:textSize="15sp"
-                />
+                android:textSize="15sp" />
 
             <!-- Priority -->
             <TextView
@@ -95,13 +93,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:paddingHorizontal="10dp"
-                android:text="High priority"
                 android:autoSizeTextType="uniform"
                 android:maxLines="1"
+                android:paddingHorizontal="10dp"
+                android:text="High priority"
                 android:textColor="#FFA500"
-                android:textSize="14sp"
-                />
+                android:textSize="14sp" />
 
             <!-- Category -->
             <TextView
@@ -109,13 +106,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:autoSizeTextType="uniform"
+                android:maxLines="1"
                 android:paddingHorizontal="10dp"
                 android:text="Personal"
-                android:maxLines="1"
-                android:autoSizeTextType="uniform"
                 android:textColor="#0000ff"
-                android:textSize="14sp"
-                />
+                android:textSize="14sp" />
         </LinearLayout>
 
 
