--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.TaskMaster" parent="Theme.AppCompat.Light.NoActionBar">
-    </style>
+    <style name="Base.Theme.TaskMaster" parent="Theme.AppCompat.Light.NoActionBar"></style>
 </resources>
